--- a/Sorry.html
+++ b/Sorry.html
@@ -20,7 +20,7 @@ center{
   <center>
 <div class="container">
   <!-- Button to trigger modal -->
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#sorryModal">Click This Be</button>
+  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#sorryModal">Click this bby</button>
 
   <!-- Modal -->
   <div class="modal fade" id="sorryModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
